--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <button id="parar" disabled>🛑 Parar Leitura</button>
   <br><br>
 
-  <video id="video" width="320" height="100" style="border:1px solid black; display: none;"></video>
+  <video id="video" width="320" height="100" transform: rotate(90deg); style="border:1px solid black; display: none;"></video>
   <p id="codigo">Código lido: nenhum</p>
-
+  
   <!-- Biblioteca ZXing -->
   <script src="https://unpkg.com/@zxing/library@latest"></script>
   <script>
